# Einfuehrung-GIS-fuer-Geowissenschaften

./: setup.cfg
source/: index.rst
source/course-info/: abschlussaprojekt.rst  abschlussaufgabe.rst  acknowledgment.rst  kursinfo.rst  licensing.rst
source/gis-data/: 3D_underground.rst  download-osm-data.rst  geobasisloader.rst  mineral-mapping.rst  ogc-dienste.rst  qfield.rst  qgreenland.rst  quickmapservices.rst
source/gis-info/: attributtabelle.rst  erweiterungen.rst  geodatenbeschaffung.rst  geodatenbeschaffung_v2.rst  geodatenmanagment.rst  geodatenorganisation.rst  hintergrundkarten.rst  hinweise.rst  koordinatensysteme.rst  nutzeroberflaeche.rst  probleme.rst  symbolisierung.rst  was-ist-gis.rst  was-ist-gis_all.rst
source/lessons/L0/: exercise-0.rst  installation.rst
source/lessons/L1/: exercise-1-tectonicplates.rst
source/lessons/L2/: exercise-2.rst  overview.rst
source/lessons/L3/: exercise-3-vulcanoes.rst  exercise-3-vulcanoes_additional.rst  exercise-3.rst  overview.rst
source/lessons/L4/: exercise-4.rst
source/lessons/L5/: digitalisieren.rst  digitalisieren_neu.rst  exercise-5a_geologie.rst  exercise-5b-iceland.rst  georeferenzieren_neu.rst
source/lessons/L6/: exercise-6a.rst  overview.rst
source/lessons/L7/: exercise-7b.rst  overview.rst
source/lessons/L8/: exercise-8.rst
source/lessons/L9/: exercise-9.rst  overview.rst
